--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,8 @@
 { // Name this configuration 
 "name": "Codespace for Skills!", 
-"customizations": { "vscode": 
-{ "extensions": [ "GitHub.copilot" ] } 
+"customizations":{ 
+  "vscode": { 
+    "extensions": [ "GitHub.copilot" ] 
+  } 
 } 
 }
